--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
-/* .navbar-nav {
+#nav {
+    list-style-type: none;
+    /* display: inline-block; */
+    display: flex;
+    flex-direction: row;
+    row-gap: 2;
+    padding: 10px;
+    justify-content: center;
     font-size: 1.5rem;
-    border: 1px solid goldenrod;
-    padding: 5px 10px
-} */
+}
+
+.nav-item {
+    padding: 10px
+}
